force-app/main/default/objects/Service_Deal__c/Service_Deal__c.object-meta.xml
<CustomObject>
    <description>Object for creating deals with customers</description>
    <label>Service Deal</label>
    <nameField>
        <displayFormat>SL-{00000}</displayFormat>
        <label>Deal Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Deals</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>