force-app/main/default/objects/Service_Deal__c/fields/Close_Date__c.field-meta.xml
<CustomField>
    <fullName>Close_Date__c</fullName>
    <description>Date and time when cleaning must be done</description>
    <label>Close Date</label>
    <type>DateTime</type>
</CustomField>