force-app/main/default/objects/Service_Deal__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>Date and time when cleaning starts</description>
    <label>Start Date</label>
    <type>DateTime</type>
</CustomField>