force-app/main/default/objects/Service_Deal__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Property__c</columns>
    <columns>OBJECT_ID</columns>
    <columns>Start_Date__c</columns>
    <columns>Close_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>