force-app/main/default/objects/Service_Deal__c/listViews/Current_Deals.listView-meta.xml
<ListView>
    <fullName>Current_Deals</fullName>
    <columns>NAME</columns>
    <columns>Property__c</columns>
    <columns>Start_Date__c</columns>
    <columns>Close_Date__c</columns>
    <filterScope>Mine</filterScope>
    <label>Current Deals</label>
</ListView>